--- a/app/index.html
+++ b/app/index.html
@@ -19,6 +19,7 @@
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
   -->
   <script src="../bower_components/angular/angular.js"></script>
+  <script src="../sly-angular/scalyr.js"></script>
   <script src="../bower_components/angular-route/angular-route.js"></script>
   <script src="../bower_components/angular-sanitize/angular-sanitize.js"></script>
   <script src="js/app.js"></script>
